# Test case:
# 1. Start the app with clear state
# 2. Click through first initial onboarding screens
# 4. Click on "Sync my coins"
# 5. Select "Bitcoin"
# 6. Fill in a valid BTC XPUB and confirm
# 7. Verify that coin has been synced

appId: io.cerberus.suite.develop
---
- launchApp:
      clearState: true
- assertVisible: 'Get started'
# TODO: refactor when UI redesign is stable
- tapOn:
      id: '@onboarding/Welcome/nextBtn'
      retryTapIfNoChange: false
- tapOn:
      text: 'Next'
      repeat: 2
      delay: 500
- tapOn:
      id: '@onboarding/TrackBalances/nextBtn'
- tapOn: 'Confirm'
- tapOn: 'Sync my coins'
- tapOn:
      id: '@onboarding/select-coin/Bitcoin'
- scrollUntilVisible:
      element:
          id: '@accounts-import/sync-coins/xpub-input'
      direction: DOWN
