# Test case:
# 1. Start the app
# 2. Import BTC asset via text
# 3. Show a fresh receive address

appId: io.cerberus.suite.${ENV}
---
- launchApp:
      clearState: true
- runFlow: 'subflows/onboarding.yaml'
- runFlow:
      file: 'subflows/importNetworkByText.yaml'
      env:
          NETWORK: 'Bitcoin'
          COIN_ADDRESS: 'zpub6rszzdAK6RuafeRwyN8z1cgWcXCuKbLmjjfnrW4fWKtcoXQ8787214pNJjnBG5UATyghuNzjn6Lfp5k5xymrLFJnCy46bMYJPyZsbpFGagT'
          SYNC_COINS_BTN: '@emptyHome/sync-my-coin'
- runFlow: 'subflows/finishCoinSyncAndMoveToPortfolio.yaml'
- tapOn:
      id: '@bottomBar/Receive'
- tapOn:
      id: '@assetsList/btc'
- scrollUntilVisible:
      element:
          id: '@receive/showAddressBtn'
      direction: DOWN
- tapOn:
      id: '@receive/showAddressBtn'
- tapOn:
      id: '@receive/continue'
      repeat: 2
- assertVisible:
      id: '@receive/addressQrCode/copyButton'
